# django-stripe-billing

./: CHANGELOG.md  LICENSE  README.md  manage.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py
.github/workflows/: release.yml  test.yml
billing/: admin.py  apps.py  factories.py  mixins.py  models.py  serializers.py  services.py  settings.py  signals.py  tasks.py  tests.py  urls.py  utils.py  views.py
billing/management/commands/: billing_init.py
billing/migrations/: 0001_initial.py  0002_alter_plan_price_id_alter_plan_type.py  0002_initial.py  0003_auto_20211012_0250.py  0003_stripeevent_primary.py  0004_stripeevent_user.py  0004_stripesubscription_and_more.py  0005_customer_expecting_webhook_since.py  0005_stripeevent_created.py  0006_auto_20211014_1942.py  0007_alter_stripeevent_status.py
billing/tests/: __init__.py  conftest.py  settings.py  test_api.py  test_checkout.py  test_customer.py  test_lifecycle_webhook.py  test_mixin.py  test_plan_limit.py  test_portal.py  test_services.py  test_stripe_subscription.py  test_stripe_webhook.py  test_views.py  urls.py  views.py
billing/tests/templates/: profile.html
billing/urls/: api.py  checkout.py
billing/views/: api.py  checkout.py  webhook.py
example/: admin.py  models.py  views.py
example/config/: __init__.py  celery.py  urls.py  wsgi.py
example/config/settings/: local.py  test.py
example/migrations/: 0001_initial.py
example/templates/example/: base.html  profile.html
