[metadata]
name = billing
version = 0.3.2
description = Django package to understand payments and billing
long_description = file: README.md
url = https://github.com/hkhanna/billing
author = Harry Khanna
author_email = harry@khanna.cc
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.7
install_requires=
    Django==3.*
    stripe==2.*

[options.packages.find]
include=
    billing
    billing.*